--- a/package.json
+++ b/package.json
@@ -8,14 +8,11 @@
     "build": "webpack --mode=production"
   },
   "dependencies": {
-    "@fortawesome/fontawesome": "^1.1.8",
-    "@fortawesome/fontawesome-free-brands": "^5.0.13",
-    "@fortawesome/fontawesome-free-regular": "^5.0.13",
-    "@fortawesome/fontawesome-free-solid": "^5.0.13",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "ejs": "~2.5.7",
     "express": "~4.16.0",
+    "font-awesome": "^4.7.0",
     "http-errors": "~1.6.2",
     "mongoose": "^5.1.0",
     "morgan": "~1.9.0"
