--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "http-errors": "~1.6.2",
     "mongoose": "^5.1.1",
     "morgan": "~1.9.0",
+    "react-router-dom": "^4.2.2",
     "reactstrap": "^6.0.1"
   },
   "devDependencies": {
@@ -36,6 +37,7 @@
     "css-loader": "^0.28.11",
     "eslint": "^4.19.1",
     "eslint-loader": "^2.0.0",
+    "eslint-plugin-react": "^7.8.2",
     "file-loader": "^1.1.11",
     "fs-extra": "^6.0.1",
     "html-webpack-plugin": "^3.2.0",
