--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "mongoose": "^5.1.1",
     "morgan": "~1.9.0",
     "react-router-dom": "^4.2.2",
-    "reactstrap": "^6.0.1"
+    "reactstrap": "^6.0.1",
+    "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
     "autoprefixer": "^8.5.0",
