--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
     "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
+    "@types/react": "^16.4.2",
+    "@types/react-dom": "^16.0.6",
     "autoprefixer": "^8.5.0",
+    "awesome-typescript-loader": "^5.2.0",
     "babel-core": "^6.26.3",
     "babel-eslint": "^8.2.3",
     "babel-jest": "^22.4.3",
@@ -53,7 +56,9 @@
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
     "sass-loader": "^7.0.1",
+    "source-map-loader": "^0.2.3",
     "style-loader": "^0.21.0",
+    "typescript": "^2.9.2",
     "url-loader": "^1.0.1",
     "webpack": "^4.8.3",
     "webpack-cli": "^2.1.3",
