--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "start": "node ./bin/www",
     "develop": "webpack --mode=development --watch",
-    "build": "webpack --mode=production"
+    "build": "NODE_ENV=production webpack",
+    "mongod": "sudo service mongod start",
+    "mongo": "mongo --host 127.0.0.1:27017"
   },
   "dependencies": {
     "bootstrap": "^4.1.1",
