--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
+    "@types/node": "^10.5.1",
     "@types/react": "^16.4.2",
     "@types/react-dom": "^16.0.6",
     "autoprefixer": "^8.5.0",
