--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
+    "@types/jest": "^23.1.4",
     "@types/node": "^10.5.1",
     "@types/react": "^16.4.2",
     "@types/react-dom": "^16.0.6",
+    "@types/react-redux": "^6.0.3",
     "autoprefixer": "^8.5.0",
     "awesome-typescript-loader": "^5.2.0",
     "babel-core": "^6.26.3",
