--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "@types/node": "^10.5.1",
     "@types/react": "^16.4.2",
     "@types/react-dom": "^16.0.6",
-    "@types/react-redux": "^6.0.3",
+    "@types/react-redux": "^6.0.4",
+    "@types/react-router-dom": "^4.2.7",
     "autoprefixer": "^8.5.0",
     "awesome-typescript-loader": "^5.2.0",
     "babel-core": "^6.26.3",
