--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "morgan": "~1.9.0",
     "react-router-dom": "^4.2.2",
     "reactstrap": "^6.0.1",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "tslint": "^5.11.0"
   },
   "devDependencies": {
     "@types/jest": "^23.1.4",
