--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,7 @@
     // "declarationMap": true,                /* Generates a sourcemap for each corresponding '.d.ts' file. */
     "sourceMap": true,                     /* Generates corresponding '.map' file. */
     "outFile": "./src/",                       /* Concatenate and emit output to single file. */
-    // "outDir": "./",                        /* Redirect output structure to the directory. */
+    "outDir": "build/dist",                        /* Redirect output structure to the directory. */
     "rootDir": "./src",                       /* Specify the root directory of input files. Use to control the output directory structure with --outDir. */
     // "composite": true,                     /* Enable project compilation */
     // "removeComments": true,                /* Do not emit comments to output. */
@@ -58,7 +58,10 @@
     "forceConsistentCasingInFileNames": true,
     "suppressImplicitAnyIndexErrors": true
   },
-  "include": ["./src/app/**/*", "./images.d.ts"],
+  "include": [
+    "./src/app/**/*.*",
+    "./images.d.ts"
+  ],
   "exclude": [
     ".idea",
     "bin",
@@ -68,7 +71,6 @@
     "node_modules",
     "public",
     "routes",
-
     "build",
     "scripts",
     "acceptance-tests",
