--- a/package.json
+++ b/package.json
@@ -8,58 +8,70 @@
     "build": "NODE_ENV=production webpack",
     "build-win": "SET NODE_ENV=production & webpack",
     "mongod": "sudo service mongod start",
-    "mongo": "mongo --host 127.0.0.1:27017"
+    "mongo": "mongo --host 127.0.0.1:27017",
+    "test": "jest",
+    "test:watch": "npm test -- --watch"
   },
   "dependencies": {
-    "bootstrap": "^4.1.1",
+    "bootstrap": "^4.1.3",
     "cookie-parser": "~1.4.3",
-    "debug": "~2.6.9",
-    "ejs": "~2.5.7",
-    "express": "~4.16.0",
+    "debug": "~3.1.0",
+    "ejs": "~2.6.1",
+    "express": "~4.16.3",
     "font-awesome": "^4.7.0",
-    "http-errors": "~1.6.2",
-    "mongoose": "^5.1.1",
+    "http-errors": "~1.6.3",
+    "mongoose": "^5.2.5",
     "morgan": "~1.9.0",
-    "react-router-dom": "^4.2.2",
-    "reactstrap": "^6.0.1",
-    "redux-thunk": "^2.2.0"
+    "react-router-dom": "^4.3.1",
+    "reactstrap": "^6.3.0",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
-    "autoprefixer": "^8.5.0",
+    "@babel/core": "^7.0.0-beta.54",
+    "@babel/preset-env": "^7.0.0-beta.54",
+    "@babel/preset-react": "^7.0.0-beta.54",
+    "autoprefixer": "^9.0.1",
     "babel-core": "^6.26.3",
-    "babel-eslint": "^8.2.5",
-    "babel-jest": "^22.4.3",
-    "babel-loader": "^7.1.4",
+    "babel-eslint": "^8.2.6",
+    "babel-jest": "^23.4.0",
+    "babel-loader": "^7.1.5",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.7.0",
+    "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
-    "babel-preset-react-app": "^3.1.1",
+    "babel-preset-react-app": "^3.1.2",
     "babel-preset-stage-0": "^6.24.1",
     "babel-runtime": "^6.26.0",
     "clean-webpack-plugin": "^0.1.19",
-    "css-loader": "^0.28.11",
-    "eslint": "^4.19.1",
-    "eslint-loader": "^2.0.0",
+    "css-loader": "^1.0.0",
+    "eslint": "^5.2.0",
+    "eslint-loader": "^2.1.0",
     "eslint-plugin-react": "^7.10.0",
+    "fetch-mock": "^6.5.2",
     "file-loader": "^1.1.11",
-    "fs-extra": "^6.0.1",
+    "fs-extra": "^7.0.0",
     "html-webpack-plugin": "^3.2.0",
+    "jest": "^23.4.1",
     "lodash": "^4.17.10",
-    "mini-css-extract-plugin": "^0.4.0",
-    "node-sass": "^4.9.0",
-    "postcss-loader": "^2.1.5",
+    "mini-css-extract-plugin": "^0.4.1",
+    "node-sass": "^4.9.2",
+    "postcss-loader": "^2.1.6",
     "precss": "^3.1.2",
-    "prop-types": "^15.6.1",
-    "react": "^16.3.2",
-    "react-dom": "^16.3.2",
+    "prop-types": "^15.6.2",
+    "react": "^16.4.1",
+    "react-dom": "^16.4.1",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
-    "sass-loader": "^7.0.1",
+    "redux-mock-store": "^1.5.3",
+    "sass-loader": "^7.0.3",
     "style-loader": "^0.21.0",
     "url-loader": "^1.0.1",
-    "webpack": "^4.8.3",
-    "webpack-cli": "^2.1.3",
+    "webpack": "^4.16.2",
+    "webpack-cli": "^3.1.0",
     "whatwg-fetch": "^2.0.4"
+  },
+  "jest": {
+    "verbose": true
   }
 }
